# strategie

./: .gitignore  CMakeLists.txt  main.c  mandel.c  mandel.h
